padding fix on mobile

--- a/queries.css
+++ b/queries.css
@@ -194,4 +194,7 @@
   .kiez-intro {
     padding: 0 3.2rem 2.4rem 3.2rem;
   }
+  .card {
+    padding-bottom: 4.8rem;
+  }
 }
